printer: fix translate mistake (IS-589)

--- a/5.0/printer/src/assets/i18n/en.json
+++ b/5.0/printer/src/assets/i18n/en.json
@@ -25,14 +25,13 @@
 	"Print_ShowHeader": "You will be registered in the department",
 	"Print_ShowText1": "Please remember your registration number",
 	"Print_ShowText2": "You will be called",
-	"Ticket_TimeFormatRaw": "{0:yyyy-MM-dd}&emsp, {0:hh\\:mm tt}",
 	"Ticket_AppHeader": "Track your queue number",
 	"List_HeaderQr1": "Desired department",
 	"List_HeaderQr2": "Ticket number",
 	"List_Print": "Print",
 	"List_Scan": "Scan",
 	"List_HeaderNoQr": "Please choose the desired department:",
-	"List_StatusMT3FormatRaw": "There are <b>{0} customers</b> in the queue",
+	"List_StatusMT3FormatRaw": "There are {{length}} customers in the queue",
 	"List_StatusLT3FormatRaw": "Please stay in the waiting area",
 	"List_Closed": "Currently closed",
 	"List_ClosedHours": "closed outside opening hours",
