--- a/5.0/printer/src/assets/i18n/de.json
+++ b/5.0/printer/src/assets/i18n/de.json
@@ -25,14 +25,13 @@
 	"Print_ShowHeader": "Sie werden angemeldet im Fachbereich",
 	"Print_ShowText1": "Bitte merken Sie sich Ihre Anmeldenummer:",
 	"Print_ShowText2": "Sie werden aufgerufen",
-	"Ticket_TimeFormatRaw": "{0:dd.MM.yyyy}&emsp, {0:HH\\:mm}Uhr",
 	"Ticket_AppHeader": "Aufruf verfolgen",
 	"List_HeaderQr1": "Gewünschter Fachbereich:",
 	"List_HeaderQr2": "Wartemarke",
 	"List_Print": "DRUCKEN",
 	"List_Scan": "SCANNEN",
 	"List_HeaderNoQr": "Bitte wählen Sie den gewünschten Fachbereich aus:",
-	"List_StatusMT3FormatRaw": "Es befinden sich noch <b>{0} Personen</b> vor Ihnen",
+	"List_StatusMT3FormatRaw": "Es befinden sich noch {{length}} Personen vor Ihnen",
 	"List_StatusLT3FormatRaw": "Bitte halten Sie sich im Wartebereich auf",
 	"List_Closed": "Derzeit geschlossen",
 	"List_ClosedHours": "geschlossen außerhalb der Öffnungszeiten",
