--- a/5.0/printer/src/assets/i18n/de.json
+++ b/5.0/printer/src/assets/i18n/de.json
@@ -8,14 +8,14 @@
 	"Entry_SelectTicket": "Heute spontan hier",
 	"Appoint_Scan": "Bitte scannen Sie den QR-Code aus Ihrer Terminbestätigung!",
 	"Appoint_InvalidHeader": "Ungültiger QR-Code!",
-	"Appoint_InvalidText": "Bitte scannen Sie den QR-Code aus ihrer aktuellen Terminbestätigung ein.",
+	"Appoint_InvalidText": "Bitte scannen Sie den QR-Code aus Ihrer aktuellen Terminbestätigung ein.",
 	"Appoint_NotFoundHeader": "Ihr Termin wurde nicht in unserer Liste gefunden.",
 	"Appoint_TicketHeader": "Sie sind angemeldet",
 	"Appoint_TicketTextWScan": "Bitte noch etwas Geduld, drucken oder scannen Sie Ihr Ticket und warten bis Ihre Nummer aufgerufen wird.",
 	"Appoint_TicketTextWOScan": "Bitte noch etwas Geduld, drucken Sie Ihr Ticket und warten bis Ihre Nummer aufgerufen wird.",
 	"Appoint_TicketPrint": "Ticket drucken",
 	"Appoint_TicketScan": "Ticket scannen",
-	"Appoint_TicketNoQueue": "Dieses Gerät ist nicht für Ihren Termin konfiguriert, bitte wenden Sie sich an die korrekte Stelle.",
+	"Appoint_TicketNoQueue": "Sie können diesen QR-Code hier nicht verwenden, bitte wenden Sie sich an die korrekte Stelle.",
 	"Appoint_Loading": "Einen Moment, Ihr Code wird geprüft.",
 	"Groups_Header": "Gewünschter Bereich:",
 	"Print_WaitHeader": "Ihre Wartemarke wird gedruckt",
