printer: erweiterte Szenarien (IS-579)

--- a/5.0/printer/src/assets/i18n/en.json
+++ b/5.0/printer/src/assets/i18n/en.json
@@ -10,12 +10,20 @@
   "Appoint_Scan": "Please scan the QR code indicated on your appointment confirmation",
   "Appoint_InvalidHeader": "QR code not valid!",
   "Appoint_InvalidText": "Please scan the QR code indicated on your appointment confirmation.",
-  "Appoint_NotFoundHeader": "Your appointment cannot be found in our list.",
+  "Appoint_NotFoundHeader": "Nicht gefunden",
+  "Appoint_NotFoundText": "Your appointment cannot be found in our list.",
+  "Appoint_NotFoundEarlyHeader": "Wrong date",
+  "Appoint_NotFoundEarlyText": "Your appointment is on {{date}} at {{time}}.",
+  "Appoint_NotFoundLateHeader": "Wrong date",
+  "Appoint_NotFoundLateText": "Your appointment was on {{date}} at {{time}}",
+  "Appoint_NoQueueHeader": "Wrong terminal",
+  "Appoint_NoQueueText": "You cannot use this QR code here. Please go to the correct place.",
+  "Appoint_LateHeader": "Too late",
+  "Appoint_LateText": "Your appointment was at {{time}}.",
   "Appoint_TicketHeader": "You have been registered",
   "Appoint_TicketTextWScan": "Please be patient",
   "Appoint_TicketPrint": "Print ticket",
   "Appoint_TicketScan": "Scan ticket",
-  "Appoint_TicketNoQueue": "You cannot use this QR code here. Please go to the correct place.",
   "Appoint_Loading": "One moment please",
   "Print_WaitHeader": "Your queue number will be printed",
   "Print_WaitText": "Please take your queue number",
