--- a/5.0/printer/src/assets/i18n/de.json
+++ b/5.0/printer/src/assets/i18n/de.json
@@ -9,12 +9,20 @@
   "Appoint_Scan": "Bitte scannen Sie den QR-Code aus Ihrer Terminbestätigung!",
   "Appoint_InvalidHeader": "Ungültiger QR-Code!",
   "Appoint_InvalidText": "Bitte scannen Sie den QR-Code aus Ihrer aktuellen Terminbestätigung ein.",
-  "Appoint_NotFoundHeader": "Ihr Termin wurde nicht in unserer Liste gefunden.",
+  "Appoint_NotFoundHeader": "Nicht gefunden",
+  "Appoint_NotFoundText": "Ihr Termin wurde nicht in unserer Liste gefunden.",
+  "Appoint_NotFoundEarlyHeader": "Falscher Tag",
+  "Appoint_NotFoundEarlyText": "Ihr Termin ist am {{date}} um {{time}} Uhr.",
+  "Appoint_NotFoundLateHeader": "Falscher Tag",
+  "Appoint_NotFoundLateText": "Ihr Termin war am {{date}} um {{time}} Uhr.",
+  "Appoint_NoQueueHeader": "Falsches Terminal",
+  "Appoint_NoQueueText": "Sie können diesen QR-Code hier nicht verwenden, bitte wenden Sie sich an die korrekte Stelle.",
+  "Appoint_LateHeader": "Zu spät",
+  "Appoint_LateText": "Ihr Termin war um {{time}} Uhr.",
   "Appoint_TicketHeader": "Sie sind angemeldet",
   "Appoint_TicketTextWScan": "Bitte noch etwas Geduld, drucken oder scannen Sie Ihr Ticket und warten bis Ihre Nummer aufgerufen wird.",
   "Appoint_TicketPrint": "Ticket drucken",
   "Appoint_TicketScan": "Ticket scannen",
-  "Appoint_TicketNoQueue": "Sie können diesen QR-Code hier nicht verwenden, bitte wenden Sie sich an die korrekte Stelle.",
   "Appoint_Loading": "Einen Moment, Ihr Code wird geprüft.",
   "Groups_Header": "Gewünschter Bereich:",
   "Print_WaitHeader": "Ihre Wartemarke wird gedruckt",
