--- a/5.0/printer/src/assets/i18n/en.json
+++ b/5.0/printer/src/assets/i18n/en.json
@@ -33,13 +33,11 @@
   "Print_ShowText1": "Please remember your registration number",
   "Print_ShowText2": "You will be called",
   "Ticket_AppHeader": "Track your queue number",
-  "List_HeaderQr1": "Desired department",
-  "List_HeaderQr2": "Ticket number",
   "List_Print": "Print",
   "List_Scan": "Scan",
-  "List_HeaderNoQr": "Please choose the desired department:",
   "List_StatusMT3FormatRaw": "There are {{length}} customers in the queue",
   "List_StatusLT3FormatRaw": "Please stay in the waiting area",
+  "List_StatusWaitTime": "approx. {{minutes}} minutes",
   "List_Closed": "Currently closed",
   "List_ClosedHours": "closed outside opening hours",
   "List_ClosedFull": "Closed, we are full"
