--- a/5.0/printer/src/assets/i18n/en.json
+++ b/5.0/printer/src/assets/i18n/en.json
@@ -35,7 +35,7 @@
   "Ticket_AppHeader": "Track your queue number",
   "List_Print": "Print",
   "List_Scan": "Scan",
-  "List_StatusMT3FormatRaw": "There are {{length}} customers in the queue",
+  "List_StatusMT3FormatRaw": "{{length}} customers are waiting",
   "List_StatusLT3FormatRaw": "Please stay in the waiting area",
   "List_StatusWaitTime": "approx. {{minutes}} minutes",
   "List_Closed": "Currently closed",
