--- a/5.0/printer/src/assets/i18n/en.json
+++ b/5.0/printer/src/assets/i18n/en.json
@@ -8,6 +8,7 @@
   "Entry_SelectAppointment": "I have an appointment",
   "Entry_SelectTicket": "Ad hoc visit",
   "Appoint_Scan": "Please scan the QR code indicated on your appointment confirmation",
+  "Appoint_ForgotInvite": "Forgot my QR code",
   "Appoint_InvalidHeader": "QR code not valid!",
   "Appoint_InvalidText": "Please scan the QR code indicated on your appointment confirmation.",
   "Appoint_NotFoundHeader": "Nicht gefunden",
