Printer: Layout kundespezifisch angepasst

--- a/5.0/printer/src/assets/i18n/de.json
+++ b/5.0/printer/src/assets/i18n/de.json
@@ -8,10 +8,10 @@
   "Entry_SelectTicket": "Heute spontan hier",
   "Appoint_Scan": "Bitte scannen Sie den QR-Code aus Ihrer Terminbestätigung!",
   "Appoint_ForgotInvite": "QR-Code vergessen",
-  "Appoint_InvalidHeader": "Ungültiger QR-Code!",
-  "Appoint_InvalidText": "Bitte scannen Sie den QR-Code aus Ihrer aktuellen Terminbestätigung ein.",
+  "Appoint_InvalidHeader": "Bei der Prüfung Ihres Termins ist ein Fehler aufgetreten.",
+  "Appoint_InvalidText": "Bitte wenden Sie sich an die Information!",
   "Appoint_NotFoundHeader": "Nicht gefunden",
-  "Appoint_NotFoundText": "Ihr Termin wurde nicht in unserer Liste gefunden.",
+  "Appoint_NotFoundText": "Bei der Prüfung Ihres Termins ist ein Fehler aufgetreten.",
   "Appoint_NotFoundEarlyHeader": "Falscher Tag",
   "Appoint_NotFoundEarlyText": "Ihr Termin ist am {{date}} um {{time}} Uhr.",
   "Appoint_NotFoundLateHeader": "Falscher Tag",
@@ -24,7 +24,7 @@
   "Appoint_TicketTextWScan": "Bitte noch etwas Geduld, drucken oder scannen Sie Ihr Ticket und warten bis Ihre Nummer aufgerufen wird.",
   "Appoint_TicketPrint": "Ticket drucken",
   "Appoint_TicketScan": "Ticket scannen",
-  "Appoint_Loading": "Einen Moment, Ihr Code wird geprüft.",
+  "Appoint_Loading": "Ein Moment Ihre Anmeldung wird überprüft.",
   "Groups_Header": "Gewünschter Bereich:",
   "Print_WaitHeader": "Ihre Wartemarke wird gedruckt",
   "Print_WaitText": "Bitte entnehmen Sie Ihre Wartenummer",
