--- a/5.0/printer/src/assets/i18n/de.json
+++ b/5.0/printer/src/assets/i18n/de.json
@@ -3,7 +3,7 @@
   "lang_en": "English",
   "Printer_Header": "Wartenummern",
   "Entry_Header1": "HERZLICH WILLKOMMEN!",
-  "Entry_Header2": "Haben Sie einen Termin vereinbart?",
+  "Entry_Header2": "Wie können wir Ihnen helfen?",
   "Entry_SelectAppointment": "Ich habe einen Termin",
   "Entry_SelectTicket": "Heute spontan hier",
   "Appoint_Scan": "Bitte scannen Sie den QR-Code aus Ihrer Terminbestätigung!",
@@ -33,13 +33,5 @@
   "Print_ShowHeader": "Sie werden angemeldet im Fachbereich",
   "Print_ShowText1": "Bitte merken Sie sich Ihre Anmeldenummer:",
   "Print_ShowText2": "Sie werden aufgerufen",
-  "Ticket_AppHeader": "Aufruf verfolgen",
-  "List_Print": "DRUCKEN",
-  "List_Scan": "SCANNEN",
-  "List_StatusMT3FormatRaw": "es warten {{length}} Personen",
-  "List_StatusLT3FormatRaw": "Bitte halten Sie sich im Wartebereich auf",
-  "List_StatusWaitTime": "ca. {{minutes}} Minuten",
-  "List_Closed": "Derzeit geschlossen",
-  "List_ClosedHours": "geschlossen außerhalb der Öffnungszeiten",
-  "List_ClosedFull": "Geschlossen, keine freie Kapazität mehr"
+  "Ticket_AppHeader": "Aufruf verfolgen"
 }
