printer: Anzeige während Druckvorgang angepasst

--- a/5.0/printer/src/assets/i18n/de.json
+++ b/5.0/printer/src/assets/i18n/de.json
@@ -27,9 +27,9 @@
   "Appoint_Loading": "Ein Moment Ihre Anmeldung wird überprüft.",
   "Groups_Header": "Gewünschter Bereich:",
   "Print_WaitHeader": "Ihre Wartemarke wird gedruckt",
-  "Print_WaitText": "Bitte entnehmen Sie Ihre Wartenummer",
+  "Print_WaitText": "Ihr Ticket wird gedruckt",
   "Print_TakeHeader": "Ihre Wartemarke wird gedruckt",
-  "Print_TakeText": "Bitte entnehmen Sie Ihre Wartenummer",
+  "Print_TakeText": "Bitte entnehmen Sie Ihr Ticket",
   "Print_ShowHeader": "Sie werden angemeldet im Fachbereich",
   "Print_ShowText1": "Bitte merken Sie sich Ihre Anmeldenummer:",
   "Print_ShowText2": "Sie werden aufgerufen",
