--- a/5.0/printer/src/assets/i18n/de.json
+++ b/5.0/printer/src/assets/i18n/de.json
@@ -33,7 +33,7 @@
   "Print_ShowHeader": "Sie werden angemeldet im Fachbereich",
   "Print_ShowText1": "Bitte merken Sie sich Ihre Anmeldenummer:",
   "Print_ShowText2": "Sie werden aufgerufen",
-  "Ticket_AppHeader": "Aufruf verfolgen",
+  "Ticket_AppHeader": "Scannen und Aufruf verfolgen",
   "List_Print": "DRUCKEN",
   "List_Scan": "SCANNEN",
   "List_StatusMT3FormatRaw": "es warten {{length}} Personen",
