--- a/5.0/printer/src/assets/i18n/de.json
+++ b/5.0/printer/src/assets/i18n/de.json
@@ -37,7 +37,7 @@
   "List_Print": "DRUCKEN",
   "List_Scan": "SCANNEN",
   "List_StatusMT3FormatRaw": "es warten {{length}} Personen",
-  "List_StatusLT3FormatRaw": "Bitte halten Sie sich im Wartebereich auf",
+  "List_StatusLT3FormatRaw": "aktuell keine Wartenden",
   "List_StatusWaitTime": "ca. {{minutes}} Minuten",
   "List_Closed": "Derzeit geschlossen",
   "List_ClosedHours": "geschlossen außerhalb der Öffnungszeiten",
