printer: Verschiedene terminmodi

--- a/5.0/printer/src/assets/i18n/de.json
+++ b/5.0/printer/src/assets/i18n/de.json
@@ -4,8 +4,14 @@
   "Printer_Header": "Wartenummern",
   "Entry_Header1": "HERZLICH WILLKOMMEN!",
   "Entry_Header2": "Haben Sie einen Termin vereinbart?",
-  "Entry_SelectAppointment": "Ich habe einen Termin",
-  "Entry_SelectTicket": "Heute spontan hier",
+  "Entry_SelectAppointment": "Mit Termin",
+  "Entry_SelectTicket": "Ohne Termin",
+  "Entry_Info": "Halten Sie Ihre Terminreservierung bereit!",
+  "Info_Header": "Haben Sie Ihre Anmeldedaten vergessen oder benötigen Unterstützung?",
+  "SelectMode_SelectScanQR": "Haben Sie einen QR-Code?",
+  "SelectMode_SelectEnterId": "Haben Sie eine Terminnummer?",
+  "SelectMode_Header": "Terminbestätigung",
+  "SelectMode_Info": "Halten Sie Ihre Terminreservierung bereit!",
   "Appoint_Scan": "Bitte scannen Sie den QR-Code aus Ihrer Terminbestätigung!",
   "Appoint_ForgotInvite": "QR-Code vergessen",
   "Appoint_InvalidHeader": "Ungültiger QR-Code!",
@@ -25,6 +31,8 @@
   "Appoint_TicketPrint": "Ticket drucken",
   "Appoint_TicketScan": "Ticket scannen",
   "Appoint_Loading": "Einen Moment, Ihr Code wird geprüft.",
+  "EnterAppointId_Header": "Bitte geben Sie Ihre Terminnummer ein.",
+  "EnterAppointId_Error": "Falsche Nummer!",
   "Groups_Header": "Gewünschter Bereich:",
   "Print_WaitHeader": "Ihre Wartemarke wird gedruckt",
   "Print_WaitText": "Bitte entnehmen Sie Ihre Wartenummer",
