--- a/5.0/printer/src/assets/i18n/en.json
+++ b/5.0/printer/src/assets/i18n/en.json
@@ -5,8 +5,14 @@
   "Groups_Header": "Desired department:",
   "Entry_Header1": "WELCOME!",
   "Entry_Header2": "Do you have an appointment?",
-  "Entry_SelectAppointment": "I have an appointment",
-  "Entry_SelectTicket": "Ad hoc visit",
+  "Entry_SelectAppointment": "With an appointment",
+  "Entry_SelectTicket": "Without appointment",
+  "Entry_Info": "Hold your reservation ready.",
+  "SelectMode_SelectScanQR": "Do you have a QR code?",
+  "SelectMode_SelectEnterId": "Do you have an appointment id?",
+  "SelectMode_Header": "Appointment confirmation",
+  "SelectMode_Info": "Hold your reservation ready.",
+  "Info_Header": "You don't have your appointment information with you? Do you need support?",
   "Appoint_Scan": "Please scan the QR code indicated on your appointment confirmation",
   "Appoint_ForgotInvite": "Forgot my QR code",
   "Appoint_InvalidHeader": "QR code not valid!",
@@ -26,6 +32,8 @@
   "Appoint_TicketPrint": "Print ticket",
   "Appoint_TicketScan": "Scan ticket",
   "Appoint_Loading": "One moment please",
+  "EnterAppointId_Header": "Enter your appointment-id, please",
+  "EnterAppointId_Error": "Invalid number!",
   "Print_WaitHeader": "Your queue number will be printed",
   "Print_WaitText": "Please take your queue number",
   "Print_TakeHeader": "Your queue number will be printed",
