printer: Unterscheidung zwischen mit/ohne Termin in Druck-Feedback

--- a/5.0/printer/src/assets/i18n/de.json
+++ b/5.0/printer/src/assets/i18n/de.json
@@ -35,8 +35,10 @@
   "EnterAppointId_Error": "Falsche Nummer!",
   "Groups_Header": "Gewünschter Bereich:",
   "Print_WaitHeader": "Ihre Wartemarke wird gedruckt",
+  "Print_WaitHeader_Apt": "Sie sind angemeldet",
   "Print_WaitText": "Bitte entnehmen Sie Ihre Wartenummer",
   "Print_TakeHeader": "Ihre Wartemarke wird gedruckt",
+  "Print_TakeHeader_Apt": "Sie sind angemeldet",
   "Print_TakeText": "Bitte entnehmen Sie Ihre Wartenummer",
   "Print_ShowHeader": "Sie werden angemeldet im Fachbereich",
   "Print_ShowText1": "Bitte merken Sie sich Ihre Anmeldenummer:",
