--- a/5.0/printer/src/assets/i18n/en.json
+++ b/5.0/printer/src/assets/i18n/en.json
@@ -35,8 +35,10 @@
   "EnterAppointId_Header": "Enter your appointment-id, please",
   "EnterAppointId_Error": "Invalid number!",
   "Print_WaitHeader": "Your queue number will be printed",
+  "Print_WaitHeader_Apt": "You are registered.",
   "Print_WaitText": "Please take your queue number",
   "Print_TakeHeader": "Your queue number will be printed",
+  "Print_TakeHeader_Apt": "You are registered.",
   "Print_TakeText": "Please take your queue number",
   "Print_ShowHeader": "You will be registered in the department",
   "Print_ShowText1": "Please remember your registration number",
