printer: scan-appoinment mit Grafik und Rückfall auf Terminnummer

--- a/5.0/printer/src/assets/i18n/de.json
+++ b/5.0/printer/src/assets/i18n/de.json
@@ -26,10 +26,12 @@
   "Appoint_NoQueueText": "Sie können diesen QR-Code hier nicht verwenden, bitte wenden Sie sich an die korrekte Stelle.",
   "Appoint_LateHeader": "Zu spät",
   "Appoint_LateText": "Ihr Termin war um {{time}} Uhr.",
+  "Appoint_SelectEnterId": "Anmeldung mit Terminnummer",
   "Appoint_TicketHeader": "Sie sind angemeldet",
   "Appoint_TicketTextWScan": "Bitte noch etwas Geduld, drucken oder scannen Sie Ihr Ticket und warten bis Ihre Nummer aufgerufen wird.",
   "Appoint_TicketPrint": "Ticket drucken",
   "Appoint_TicketScan": "Ticket scannen",
+  "Appoint_Timeout": "Leider wurde Ihr QR-Code nicht gescannt!",
   "Appoint_Loading": "Einen Moment, Ihr Code wird geprüft.",
   "EnterAppointId_Header": "Bitte geben Sie Ihre Terminnummer ein.",
   "EnterAppointId_Error": "Falsche Nummer!",
