--- a/5.0/printer/src/assets/i18n/en.json
+++ b/5.0/printer/src/assets/i18n/en.json
@@ -27,10 +27,12 @@
   "Appoint_NoQueueText": "You cannot use this QR code here. Please go to the correct place.",
   "Appoint_LateHeader": "Too late",
   "Appoint_LateText": "Your appointment was at {{time}}.",
+  "Appoint_SelectEnterId": "Enter appointment-id",
   "Appoint_TicketHeader": "You have been registered",
   "Appoint_TicketTextWScan": "Please be patient",
   "Appoint_TicketPrint": "Print ticket",
   "Appoint_TicketScan": "Scan ticket",
+  "Appoint_Timeout": "No QR-Code scanned, yet!",
   "Appoint_Loading": "One moment please",
   "EnterAppointId_Header": "Enter your appointment-id, please",
   "EnterAppointId_Error": "Invalid number!",
