--- a/5.0/printer/src/assets/i18n/de.json
+++ b/5.0/printer/src/assets/i18n/de.json
@@ -7,7 +7,7 @@
   "Entry_SelectAppointment": "Mit Termin",
   "Entry_SelectTicket": "Ohne Termin",
   "Entry_Info": "Halten Sie Ihre Terminreservierung bereit!",
-  "Info_Header": "Haben Sie Ihre Anmeldedaten vergessen oder benötigen Unterstützung?",
+  "Info_Header": "Haben Sie Fragen oder benötigen Unterstützung?",
   "SelectMode_SelectScanQR": "Haben Sie einen QR-Code?",
   "SelectMode_SelectEnterId": "Haben Sie eine Terminnummer?",
   "SelectMode_Header": "Terminbestätigung",
